# ir-sunrise

./: Cargo.toml  justfile
.cargo/: config.toml
board/: .gitignore  board.py  pyproject.toml
enclosure/: .gitignore  box.py  pyproject.toml
firmware/: build.rs
firmware/src/: hello-world.rs  ir-decoder.rs  ir-transmit-test.rs  ir-transmitter.rs
src/: hello-world-example.rs  ir-decoder.rs  ir-sunrise.rs  ir-transmitter.rs  lib.rs
sunrise-server/: Cargo.toml  Dockerfile
sunrise-server/src/: main.rs
